<resources>

    //Main
    <string name="app_name">Blood Donor</string>
    <string name="home_title">Blood Donor</string>
    <string name="home_subtitle">A drop of blood can save a life!</string>
    <string name="request_title">Request Blood</string>
    <string name="request_subtitle">Establish Ties With Blood, Not Money.</string>
    <string name="donate_title">Donate Blood</string>
    <string name="donate_subtitle">Blood Donation Is A Great Act Of Kindness.</string>
    <string name="appointment_title">Appointment</string>
    <string name="appointment_subtitle">Blood is a life, pass it on!</string>
    <string name="records_title">Records</string>
    <string name="records_subtitle">Donate! It is a bloody good job.</string>

    //Date/Time
    <string name="datePicker">datePicker</string>
    <string name="timePicker">timePicker</string>

    //Request Blood
    <string name="name">Name:</string>
    <string name="phone">Phone :</string>
    <string name="address">Address:</string>
    <string name="email_address">Email Address:</string>
    <string name="date_of_birth">Date of Birth :</string>
    <string name="gender">Gender :</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="blood_type">Blood Type :</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="ab">AB</string>
    <string name="o">O</string>
    <string name="enter_name">Enter your name</string>
    <string name="enter_phone_no">Enter your phone number</string>
    <string name="enter_address">Enter your house address</string>
    <string name="enter_email">Enter your email address</string>
    <string name="enter_birth_date">DD/MM/YYYY</string>
    <string name="button_submit">Submit</string>
    <string name="toast_message">Your information have been saved, thank you for the cooperation</string>

    //Donate Blood
    <string name="request_img">request_blood</string>
    <string name="donate_img">donate_img</string>
    <string name="appoint_img">appoint_img</string>
    <string name="records_img">records_img</string>
    <string name="location">Open location</string>
    <string name="open">OPEN</string>

    //Location 1
    <string name="location1_img">Blood Donation Centre</string>
    <string name="location1_text">Blood Donation Centre</string>
    <string name="location1_des"><b><i>Located in:</i></b> Subang Jaya Medical Centre (SJMC)
        \n <b><i>Phone:</i></b> 03–5639 1575</string>
    <string name="location1_open">Blood Donation Centre</string>

    //Location 2
    <string name="location2_img">Pusat Darah Negara Midvalley</string>
    <string name="location2_text">Pusat Darah Negara Midvalley</string>
    <string name="location2_des"><b><i>Located in:</i></b> Mid Valley Megamall
        \n <b><i>Phone:</i></b> 03–2280 0349</string>
    <string name="location2_open">Pusat Darah Negara Midvalleye</string>

    //Location 3
    <string name="location3_img">Jabatan Perubatan </string>
    <string name="location3_text">Jabatan Perubatan Transfusi</string>
    <string name="location3_des"><b><i>Located in:</i></b> University of Malaya Medical Centre
         \n <b><i>Phone:</i></b> 03–7949 2039</string>
    <string name="location3_open">Jabatan Perubatan Transfusi</string>
    <string name="state">State:</string>

    //Confirmation
    <string name="confirmation_title">Confirmation</string>
    <string name="confirmation_subtitle">The blood is red gold in time of saving a life.</string>


</resources>