<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/MediumSlateBlue"
    android:orientation="vertical"
    tools:context=".RequestActivity">

    <TextView
        android:id="@+id/request_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/request_title"
        android:textColor="@color/AntiqueWhite"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/header_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="3dp"
        android:text="@string/request_subtitle"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/request_title" />

    <ScrollView
        android:id="@+id/request_scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="120dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/request_background"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="name"
                android:ems="10"
                android:hint="@string/enter_name"
                android:inputType="textPersonName"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/phone_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/phone"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/phone_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:autofillHints="phone"
                android:ems="10"
                android:hint="@string/enter_phone_no"
                android:inputType="phone"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/address_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/address"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/address_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="house address"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/enter_address"
                android:inputType="textMultiLine"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/state_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/state"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/state_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/email_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/email_address"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/email_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="emailAddress"
                android:ems="10"
                android:hint="@string/enter_email"
                android:inputType="textWebEmailAddress"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/date_of_birth"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/datebirth_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="birth date"
                android:ems="10"
                android:hint="@string/enter_birth_date"
                android:inputType="date"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/gender"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/radioGroupGender"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/button_female"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onItemSelected"
                    android:text="@string/female"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <RadioButton
                    android:id="@+id/button_male"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onItemSelected"
                    android:text="@string/male"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

            </RadioGroup>

            <TextView
                android:id="@+id/blood_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/blood_type"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/radioGroupBlood"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/A_blood_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onItemSelected"
                    android:text="@string/a"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <RadioButton
                    android:id="@+id/B_blood_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onItemSelected"
                    android:text="@string/b"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <RadioButton
                    android:id="@+id/AB_blood_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onItemSelected"
                    android:text="@string/ab"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <RadioButton
                    android:id="@+id/O_blood_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onItemSelected"
                    android:text="@string/o"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

            </RadioGroup>

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="ConfirmationActivity"
                android:text="@string/button_submit" />


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>